# fastapi_crud

./: .env.example  .flake8  .gitignore  alembic.ini  ecommerce.db  main.py  mypy.ini  pyproject.toml
app/: celery_config.py  logger.py  main.py  middlewares.py  settings.py  tasks.py
app/backend/: db.py  db_depends.py
app/migrations/: env.py
app/migrations/versions/: 08a9ba00e549_initial_migration.py  1a24f0e1387b_initial_migration.py  2024_10_02_12:35_initial_migration.py  2024_10_03_21:18_unique_product_slug.py  2024_10_04_13:24_review_model.py  2024_10_04_23:16_review_datetime_field_timestamp.py  9074be10474d_create_user_model.py
app/models/: __init__.py  category.py  products.py  review.py  user.py
app/models/services/: exceptions.py  products_utils.py  review_utils.py  utils.py
app/routers/: admin.py  auth.py  category.py  products.py  rewiew.py  services.py  user.py
app/routers/services/: auth.py  permissions.py
app/schemas/: category.py  product.py  review.py  user.py
