[tool.poetry]
name = "test-pyenv-poetry"
version = "0.1.0"
description = ""
authors = ["Marsel <lllmarselll@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.31.0"}
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"
flake8 = "^7.1.1"
python-slugify = "^8.0.4"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.1"
passlib = "^1.7.4"
bcrypt = "4.0.1"
types-passlib = "^1.7.7.20240819"
python-multipart = "^0.0.12"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
types-python-jose = "^3.3.4.20240106"
email-validator = "^2.2.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
